--- a/Guru99/test-output/emailable-report.html
+++ b/Guru99/test-output/emailable-report.html
@@ -8,18 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test123</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">183</td><td>reg</td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">157</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test123 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">BankProject.Dropdownhandle</td><td><a href="#m0">DropdownHandle_by_index</a></td><td rowspan="1">1701767939286</td><td rowspan="1">3</td></tr><tr class="failedodd"><td rowspan="1">BankProject.Get_data_from_excel</td><td><a href="#m1">Fetch_Required_Data_From_Excel</a></td><td rowspan="1">1701767939149</td><td rowspan="1">74</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ZingHR.UserLogin</td><td><a href="#m0">User_Login</a></td><td rowspan="1">1701926849181</td><td rowspan="1">60</td></tr></tbody>
 </table>
-<h2>Test123</h2><h3 id="m0">BankProject.Dropdownhandle#DropdownHandle_by_index</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.getTitle()&quot; because &quot;BankProject.Dropdownhandle.driver&quot; is null
-	at BankProject.Dropdownhandle.DropdownHandle_by_index(Dropdownhandle.java:23)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">BankProject.Get_data_from_excel#Fetch_Required_Data_From_Excel</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.getTitle()&quot; because &quot;BankProject.Get_data_from_excel.driver&quot; is null
-	at BankProject.Get_data_from_excel.Fetch_Required_Data_From_Excel(Get_data_from_excel.java:28)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">ZingHR.UserLogin#User_Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
