--- a/Guru99/test-output/old/Default suite/methods-alphabetical.html
+++ b/Guru99/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b77ea8">  <td>23/12/05 11:39:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.App_Login()[pri:0, instance:BankProject.Get_data_from_excel@740d2e78]">&gt;&gt;App_Login</td> 
-<td>&nbsp;</td>  <td>main@2048537720</td>   <td></td> </tr>
-<tr bgcolor="96c360">  <td>23/12/05 11:39:32</td>   <td>4278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Get_data_from_excel.Fetch_Required_Data_From_Excel()[pri:0, instance:BankProject.Get_data_from_excel@740d2e78]">Fetch_Required_Data_From_Excel</td> 
-  <td>main@2048537720</td>   <td></td> </tr>
-<tr bgcolor="b77ea8">  <td>23/12/05 11:39:24</td>   <td>-3439</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:BankProject.Get_data_from_excel@740d2e78]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2048537720</td>   <td></td> </tr>
-<tr bgcolor="b77ea8">  <td>23/12/05 11:39:35</td>   <td>7704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:BankProject.Get_data_from_excel@740d2e78]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2048537720</td>   <td></td> </tr>
+<tr bgcolor="886fb6">  <td>23/12/07 10:57:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLogin.User_Login()[pri:0, instance:ZingHR.UserLogin@484094a5]">User_Login</td> 
+  <td>main@1174248013</td>   <td></td> </tr>
 </table>
